#1557: Refactored User Commands to move the User Visit and Form from constructor paramters to command execution